rnsc/test_data/rns_integration/error/parser/super_directive/trailing_token_recovers.rns

.class MyClass

.super java/lang/String java/lang/Other

     unknown_token ; <- still reported